# SR-MIDAS

./: .gitignore  LICENSE  README.md  ff_MIDAS_sr.py  pyproject.toml  sr_config.json  super_res_install.py  super_res_process.py
src/sr_midas/: __init__.py
src/sr_midas/_cli/: create_patchstore_cli.py  create_peakbank_cli.py  create_pred_patchstore_cli.py  hp_optimize_cli.py  predict_cli.py  sr_process_cli.py  train_cli.py
src/sr_midas/data/: patchstore.py  upscale.py
src/sr_midas/models/cnnsr/: __init__.py  architecture.py  cnnsr_sr_config.json  dataset.py  hp_optimize.py  load.py  predict.py  train.py
src/sr_midas/models/cnnsr/pretrained/: __init__.py
src/sr_midas/models/cnnsr/pretrained/x1_x2-pst60000-240117_arch3-itrOut/: _train_args.json
src/sr_midas/models/cnnsr/pretrained/x4Pred_x8-pst60000-240117_arch3-itrOut/: _train_args.json
src/sr_midas/physics/: coord_transform.py  detector.py  peaks2d.py
src/sr_midas/pipeline/: _patch_ops.py  sr_process.py
src/sr_midas/synthesis/: patch_methods.py  patchstore_gen.py  peak_artist.py  peakbank.py
src/sr_midas/utils/: ascii_art.py  io.py
trained_mods_CNNSR/x1_x8-pst60000-250606_arch3-itrOut/: _train_args.json
trained_mods_CNNSR/x2pred_x4-pst60000-240117_arch3-itrOut/: _train_args.json
